crates/serde-feather/tests/ui/tuple_default_prefix.rs
use serde_feather::FeatherDeserialize;

#[derive(FeatherDeserialize)]
struct AmbiguousTupleStruct(#[serde(default)] u8, u8);

#[derive(FeatherDeserialize)]
enum AmbiguousTupleVariant {
    Value(#[serde(default)] u8, u8),
}

fn main() {}
